# simple-gui-crawler

./: .gitmodules  CMakeLists.txt  README.md  link_status_widget.cpp  link_status_widget.h  main.cpp  test03-v03.pro  widget.cpp  widget.h  widget.ui
unit_tests/test_ThreadPool/: submission_test.cpp
webgrep/: CMakeLists.txt  ch_ctx_nix.cpp  ch_ctx_nix.h  ch_ctx_win32.cpp  ch_ctx_win32.h  client_http.cpp  client_http.hpp  crawler.cpp  crawler.h  crawler_private.cpp  crawler_private.h  crawler_worker.cpp  crawler_worker.h  linked_task.cpp  linked_task.h  thread_pool.cpp  thread_pool.h
webgrep/http_impl/: ch_ctx_curl.cpp  ch_ctx_curl.h
